tests/fixtures/type_err/type_mismatch.reconf
let bad : Int = "8080";

bad
